# dask-compss

./: .gitignore  pyproject.toml  setup.cfg
dask-compss/: __init__.py  executor.py
