[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dask-compss"
version = "0.1.0"
description = "COMPSs scheduler for Dask"
authors = ["Sergio Sánchez Ramírez"]
license = {text = "Apache License 2.0"}
dependencies = [
	"python>=3.10",
	"dask",
	"pycompss>=2.10",
	"dill",
]